--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.4.2
   path: ^1.9.1
   shared_preferences: ^2.0.6
+  flutter_local_notifications: any
 
 dev_dependencies:
   flutter_test:
